fix presentation img spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,7 +43,7 @@
   }
   .presentation img {
     float: left;
-    padding-right: 10px;
+    margin-right: 15px;
   }
 }
 
@@ -75,5 +75,5 @@
   address {
     text-align: left;
   }
-  
+
 }
